# vk_multisender

./: .gitignore  README.md  program.py  pyproject.toml  run.bat
